/**
 * Контракты для сервиса hypervisor-manager
 */

syntax = "proto3";

package tool_cluster.v4;

import "shared_virtual_machine.proto";
import "shared_hypervisor.proto";

/**
 * Сервис HypervisorManager реализует логику взаимодействия и сбора информации с гипервизоров
 */
service HypervisorManager  {
  // Получение списка виртуальных машин гипервизора
  rpc CollectVirtualMachinesList(CollectVirtualMachinesListRequest) returns (CollectVirtualMachinesListResponse);
}

/**
 * Контракт запроса для rpc CollectVirtualMachinesList
 */
message CollectVirtualMachinesListRequest {
  // Информация о гипервизоре
  HypervisorContent hypervisor = 1;
}

/**
 * Контракт ответа для rpc CollectVirtualMachinesList
 */
message CollectVirtualMachinesListResponse {
  // Спискок виртуальных машин
  VirtualMachines virtual_machines = 1;
}
